--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,6 @@
 cmake_minimum_required(VERSION 3.23)
 project(BUT1_SAE_S1_02)
-
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(BUT1_SAE_S1_02
-        main.cpp
-        ods4.txt)
+add_executable(BUT1_SAE_S1_02 main.cpp
+        ods4.txt proto_fonc.h dico.cpp joueurs.cpp)
