remi lancement manche

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(BUT1_SAE_S1_02)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(BUT1_SAE_S1_02 main.cpp ods4.txt
-        joueurs.cpp dico.cpp)
+        joueurs.cpp dico.cpp manche.cpp manche.h)
