--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 3.23)
 project(BUT1_SAE_S1_02)
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(BUT1_SAE_S1_02 conteneurTDEdico.cpp dico.cpp joueurs.cpp manche.cpp partie.cpp main.cpp)
+add_executable(BUT1_SAE_S1_02 joueurs.cpp conteneurTDEdico.cpp dico.cpp manche.cpp partie.cpp main.cpp)
